2008-01-19  Robert Schuster  <robertschuster@fsfe.org>

	Added --with-target-classpath-classes option to support having glib.zip
	in a different location on target environment.

	* libraries/javalib/Makefile.am (install-data-local): 
	Link TARGET_CLASSPATH_CLASSES as rt.jar. 

	* m4/classpath.m4 (AC_CHECK_WITH_TARGET_CLASSPATH_CLASSES): Added.

	* configure.ac: Use AC_CHECK_WITH_TARGET_CLASSPATH_CLASSES.

2008-01-19  Dalibor Topic  <robilad@kaffe.org>

	* TODO: Updated.

2008-01-19  Dalibor Topic  <robilad@kaffe.org>

	*  config/alpha/jit-alpha.def,
	config/alpha/jit-icode.h,
	config/alpha/linux/md.c,
	config/alpha/netbsd1/md.c,
	config/alpha/osf/md.c,
	config/arm/jit-arm.def,
	config/arm/jit3-arm.def,
	config/bfin/jit-bfin.def,
	config/bfin/jit3-bfin.def,
	config/ia64/linux/md.h,
	config/m68k/jit3-m68k.def,
	config/mips/mips.c,
	config/powerpc/callmethod_ppc.h,
	config/powerpc/jit3-icode.h,
	config/powerpc/jit3-powerpc.def,
	config/powerpc/netbsd1/md.c,
	config/sparc/jit-sparc.def.
	kaffe/kaffevm/classMethod.c,
	kaffe/kaffevm/classPool.c,
	kaffe/kaffevm/exception.c,
	kaffe/kaffevm/findInJar.c,
	kaffe/kaffevm/kaffe.def,
	kaffe/kaffevm/soft.c,
	kaffe/kaffevm/string.c,
	kaffe/kaffevm/gcj/eh.c,
	kaffe/kaffevm/gcj/gcj-glue.c,
	kaffe/kaffevm/jit/labels.c,
	kaffe/kaffevm/jit/methodcalls.c,
	kaffe/kaffevm/jit/native-wrapper.c,
	kaffe/kaffevm/jit3/icode.c,
	kaffe/kaffevm/jit3/machine.c,
	kaffe/kaffevm/jit3/registers.h,
	kaffe/kaffevm/jni/jni.c,
	kaffe/kaffevm/systems/oskit-pthreads/pjthread.c,
	kaffe/kaffevm/systems/unix-jthreads/jthread.c,
	kaffe/kaffevm/systems/win32/winio.c,
	kaffe/xprof/xprofiler.c,
	libraries/clib/native/Class.c:
	Removed ifdef-ed out code.

	* config/i386/callKaffeException.h,
	config/i386/common.h, 
	config/i386/sysdepCallMethod.h: 
	Use __asm__ instead of asm.

	* kaffe/kaffevm/Makefile.am (libkaffe_la_SOURCES): Added gc-refs.c.

	* kaffe/kaffevm/gc-refs.c: New file. Moved most of the code from